--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.5.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
